k8s/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mspr-frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mspr-frontend
  template:
    metadata:
      labels:
        app: mspr-frontend
    spec:
      containers:
        - name: mspr-frontend
          image: juliemontoux/mspr-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
