k8s/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mspr-frontend
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: mspr-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
