k8s/frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: cofrap.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mspr-frontend
            port:
              number: 80
